--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.6",
+    "@prisma/client": "^5.5.2",
+    "@tanstack/react-query": "^5.13.4",
+    "@tanstack/react-query-devtools": "^5.13.5",
+    "axios": "^1.6.1",
+    "next": "14.0.4",
+    "openai": "^4.21.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^3.9.4",
     "postcss": "^8",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.0"
   }
 }
